@@ -1,3 +1,7 @@
+Wed Jun  4 20:27:41 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* dbprovider.c, show.c, lib/neuralnet.c: minor compiler warnings
+
 Wed Jun  4 14:26:16 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* render.c: fix problems with 2d player turn arrows
